NetBSD Problem Report #39857

From bernd@arresum.veego.de  Sun Nov  2 22:57:35 2008
Return-Path: <bernd@arresum.veego.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 9EBF263B88A
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  2 Nov 2008 22:57:35 +0000 (UTC)
Message-Id: <200811022257.mA2MvQgv009161@arresum.veego.de>
Date: Sun, 2 Nov 2008 23:57:27 +0100 (CET)
From: Bernd Ernesti <pr200821@veego.de>
Reply-To: Bernd Ernesti <pr200821@veego.de>
To: gnats-bugs@gnats.NetBSD.org
Subject: the new syslog cuts off messages and prints additonal newlines
X-Send-Pr-Version: 3.95

>Number:         39857
>Category:       bin
>Synopsis:       syslog cuts off messages and prints additonal newlines
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Nov 02 23:00:10 +0000 2008
>Closed-Date:    Fri Dec 25 18:20:42 +0000 2009
>Last-Modified:  Fri Dec 25 18:20:42 +0000 2009
>Originator:     Bernd Ernesti
>Release:        NetBSD 5.99.01
>Organization:

>Environment:
System: NetBSD 5.99.01
Architecture: i386
Machine: i386
>Description:
	The new syslog code adds a newline at the begining of the message
	and cuts off the end of the message.

	Here is an example send to a user:
--- cut ---
root@host1#
Message from syslogd@host1.domain1.de at Nov  2 09:36:28 ...
95 <38>Nov  2 09:36:28 host1 inetd[1330]: connection from host2.domain2.de, service logi

Message from syslogd@host1.domain1.de at Nov  2 09:36:29 ...
95 <38>Nov  2 09:36:29 host1 rlogind[1330]: user2@host2.domain2.de as user1: iruserok su
--- cut ---

	While the same line in a logfile looks ok:
Nov  2 09:36:28 host1 inetd[1330]: connection from host2.domain2.de, service login (tcp)
Nov  2 09:36:29 host1 rlogind[1330]: user2@host2.domain2.de as user1: iruserok succeeded

>How-To-Repeat:
	Add a line to /etc/syslog.conf which send the syslog message to a user
	or on the console:
		*.notice;auth.debug root      
>Fix:
	IMHO the sqeuence number should be removed from the output and so the
	cut off wouldn't happen.

>Release-Note:

>Audit-Trail:
From: Bernd Ernesti <pr200821@veego.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/39857: the new syslog cuts off messages and prints additonal newlines
Date: Mon, 3 Nov 2008 00:37:42 +0100

 It looks like all message are now send in UTC and not the local timezone.
 This is confusing and not what was used before.

From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39857 CVS commit: src/usr.sbin/syslogd
Date: Mon,  3 Nov 2008 02:44:02 +0000 (UTC)

 Module Name:	src
 Committed By:	christos
 Date:		Mon Nov  3 02:44:02 UTC 2008

 Modified Files:
 	src/usr.sbin/syslogd: syslogd.c

 Log Message:
 PR/39857: Bernd Ernesti: Fix broken output caused by a wrong offset. From
 Martin Schuette.


 To generate a diff of this commit:
 cvs rdiff -r1.87 -r1.88 src/usr.sbin/syslogd/syslogd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: veego@NetBSD.org
State-Changed-When: Fri, 25 Dec 2009 18:20:42 +0000
State-Changed-Why:
Fixed by Christos one year ago.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.