PR/39857: Bernd Ernesti: Fix broken output caused by a wrong offset. From Martin Schuette.